--- a/Landing page/home.html
+++ b/Landing page/home.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
+        <img style="width: 35%; margin-left: 15%;" src="imagens/logo.png" alt="">
         <img src="imagens/png-transparent-playstation-2-computer-icons-others-angle-text-logo.png" alt="Imagem 1" class="header-image">
         <img src="imagens/png-clipart-xbox-360-xbox-one-xbox-electronics-logo.png" alt="Imagem 2" class="header-image">
         <img src="imagens/649167-computador-icone-simbolo-sinal-gratis-vetor.jpg" alt="Imagem 3" class="header-image">
 
-        <h1>Cyberpunk 2077 </h1>
+        
         <nav>
             <ul>
                 <li><a href="home.html" id="homeLink">Home</a></li>
@@ -31,7 +32,7 @@
             </section>
         </container>
         <div class="imagemINTRODUCTION">
-            <img src="imagens/viktor.jpg" alt="">
+           
         </div>
 
         <div class="imagens-container">
